--- a/html/index.html
+++ b/html/index.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Arcana by HTML5 UP</title>
+		<title>Beerightbackbees</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="C:\Users\Max Brimhall\Documents\GitHub\brbees\Beerightbackbees\css\main.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -18,23 +18,23 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Arcana <em>by HTML5 UP</em></a></h1>
+						<h1><a href="index.html" id="logo">Bee <em>Right Back Bees</em></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">Material</a>
 									<ul>
-										<li><a href="#">Lorem dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam sed tempus</a></li>
+										<li><a href="#">Schedule</a></li>
+										<li><a href="#">Workshops</a></li>
+										<li><a href="#">Giftshop</a></li>
 										<li>
 											<a href="#">Submenu</a>
 											<ul>
-												<li><a href="#">Lorem dolor</a></li>
-												<li><a href="#">Phasellus magna</a></li>
+												<li><a href="#">Honey</a></li>
+												<li><a href="#">Wax candles</a></li>
 												<li><a href="#">Magna phasellus</a></li>
 												<li><a href="#">Etiam nisl</a></li>
 												<li><a href="#">Veroeros feugiat</a></li>
@@ -43,7 +43,7 @@
 										<li><a href="#">Veroeros feugiat</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
+								<li><a href="left-sidebar.html">About Us</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="two-sidebar.html">Two Sidebar</a></li>
 								<li><a href="no-sidebar.html">No Sidebar</a></li>
@@ -55,7 +55,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>
+						<h2>Why Help Bees? <em>Something no one talks about.</em></h2>
 						<a href="#" class="button">Learn More</a>
 					</header>
 				</section>
@@ -67,22 +67,22 @@
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-paper-plane"></i>
-									<h3>This Is Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<h3>Honey</h3>
+									<p>Honey has been used in the past as an antibacterial agent, Anti-inflammatory and Antioxidant keeping people healthy for many years!</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-pencil-alt"></i>
-									<h3>Also Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<h3>Beeswax</h3>
+									<p>Beeswax has been used for the stereotypical candle-making as well as, conditioning wood, skincare products, and as a foodwrap. Interesting facts, right?</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-wrench"></i>
-									<h3>Probably Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<h3>Pollination</h3>
+									<p>Pollination is used by plants to reproduce. Why is this important? Because we eat plant babies regularly..</p>
 								</div>
 							</section>
 						</div>
@@ -93,7 +93,7 @@
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>A gigantic heading you can use for whatever</h2>
+							<h2>Pollination Benefits</h2>
 							<p>With a much smaller subtitle hanging out just below it</p>
 						</header>
 					</div>
@@ -149,8 +149,8 @@
 				<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header>
-							<h2>Are you ready to continue your quest?</h2>
-							<a href="#" class="button">Insert Coin</a>
+							<h2>Pollination Benefits? <em>and the curse of Pollination.</em></h2>
+							<a href="#" class="button">Learn More</a>
 						</header>
 					</div>
 				</section>
