--- a/html/index.html
+++ b/html/index.html
@@ -93,8 +93,8 @@
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>Pollination Benefits</h2>
-							<p>With a much smaller subtitle hanging out just below it</p>
+							<h2>Why Honeybees?</h2>
+							<p>Stopping the pollination crisis takes you and everyone to at least know about bees.</p>
 						</header>
 					</div>
 				</section>
@@ -107,8 +107,8 @@
 								<div class="box post">
 									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The First Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Honey</h3>
+										<p>The only food that we harvest from an insect is Honey.</p>
 									</div>
 								</div>
 							</section>
@@ -116,8 +116,8 @@
 								<div class="box post">
 									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The Second Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Beeswax</h3>
+										<p>From beauty products to functional uses like preserving food, Beeswax is all important to society currently</p>
 									</div>
 								</div>
 							</section>
@@ -127,8 +127,8 @@
 								<div class="box post">
 									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The Third Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Pollination</h3>
+										<p>We need polination for food whether you are a meat eater or not. However, Pollination has a dark side to it as well.</p>
 									</div>
 								</div>
 							</section>
@@ -136,8 +136,8 @@
 								<div class="box post">
 									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>The Fourth Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+										<h3>Diseases</h3>
+										<p>Everything now is fighting against the bee. They have diseases and parasites that are killing entire colonies.</p>
 									</div>
 								</div>
 							</section>
@@ -149,7 +149,7 @@
 				<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header>
-							<h2>Pollination Benefits? <em>and the curse of Pollination.</em></h2>
+							<h2>Pollination Benefits? <em>and the dark side of Pollination.</em></h2>
 							<a href="#" class="button">Learn More</a>
 						</header>
 					</div>
@@ -160,11 +160,11 @@
 					<div class="container">
 						<div class="row">
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
+								<h3>Links to Places</h3>
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
+									<li><a href="#">blog</a></li>
+									<li><a href="#">Pollinators</a></li>
+									<li><a href="#"></a></li>
 									<li><a href="#">Rutrum accumsan dolor</a></li>
 									<li><a href="#">Mattis rutrum accumsan</a></li>
 									<li><a href="#">Suspendisse varius nibh</a></li>
@@ -172,11 +172,11 @@
 								</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
+								<h3>Links to us</h3>
 								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
+									<li><a href="#">Home</a></li>
+									<li><a href="#">Shopping</a></li>
+									<li><a href="#">About Us</a></li>
 									<li><a href="#">Mattis et sed accumsan</a></li>
 									<li><a href="#">Duis neque nisi sed</a></li>
 									<li><a href="#">Sed et dapibus quis</a></li>
@@ -228,12 +228,12 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/js/jquery.min.js"></script>
+			<script src="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/js/jquery.dropotron.min.js"></script>
+			<script src="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/js/browser.min.js"></script>
+			<script src="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/js/breakpoints.min.js"></script>
+			<script src="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/js/util.js"></script>
+			<script src="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/js/main.js"></script>
 
 	</body>
 </html>
