Update to CSS and HTML
Updated HTML and adding new images. Images are not in line currently.

--- a/html/index.html
+++ b/html/index.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Beerightbackbees</title>
+		<title>Bee right back farms</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="C:\Users\Max Brimhall\Documents\GitHub\brbees\Beerightbackbees\css\main.css" />
+		<link rel="stylesheet" href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/css/main.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -18,29 +18,18 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Bee <em>Right Back Bees</em></a></h1>
-
+						<h1><a href="index.html" id="logo">Bee <em>Right Back Bees</em></a><img class = 'logoPics'src='C:/Users/mbrim/Downloads/heroestohives.jpg' alt='Idaho Preferred Logo'></h1>
+						
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Material</a>
+									<a href="#">Shopping</a>
 									<ul>
-										<li><a href="#">Schedule</a></li>
-										<li><a href="#">Workshops</a></li>
-										<li><a href="#">Giftshop</a></li>
-										<li>
-											<a href="#">Submenu</a>
-											<ul>
-												<li><a href="#">Honey</a></li>
-												<li><a href="#">Wax candles</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="#">Honey</a></li>
+										<li><a href="#">Eggs</a></li>
+										<li><a href="#"></a></li>
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">About Us</a></li>
@@ -55,8 +44,8 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Why Help Bees? <em>Something no one talks about.</em></h2>
-						<a href="#" class="button">Learn More</a>
+						<h2>Already a beekeeper? <em>check out this article!</em></h2>
+						<a href="https://scientificbeekeeping.com/" class="button">Learn More</a>
 					</header>
 				</section>
 
@@ -149,8 +138,8 @@
 				<section id="cta" class="wrapper style3">
 					<div class="container">
 						<header>
-							<h2>Pollination Benefits? <em>and the dark side of Pollination.</em></h2>
-							<a href="#" class="button">Learn More</a>
+							<h2>Local to Idaho? <em>Check out local events held in Idaho</em></h2>
+							<a href="https://idahopreferred.com/" class="button">Learn More</a>
 						</header>
 					</div>
 				</section>
@@ -160,27 +149,17 @@
 					<div class="container">
 						<div class="row">
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Places</h3>
-								<ul class="links">
-									<li><a href="#">blog</a></li>
-									<li><a href="#">Pollinators</a></li>
-									<li><a href="#"></a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
-								</ul>
-							</section>
-							<section class="col-3 col-6-narrower col-12-mobilep">
 								<h3>Links to us</h3>
 								<ul class="links">
 									<li><a href="#">Home</a></li>
 									<li><a href="#">Shopping</a></li>
 									<li><a href="#">About Us</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
+								</ul>
+								<h3>Links to Places</h3>
+								<ul class="links">
+									<li><a href="https://idahopreferred.com/">Local Info</a></li>
+									<li><a href="https://neidahobeekeepers.org/">Local Beekeeper Association</a></li>
+									<li><a href="https://scientificbeekeeping.com/">Useful Info</a></li>
 								</ul>
 							</section>
 							<section class="col-6 col-12-narrower">
@@ -228,12 +207,12 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/js/jquery.min.js"></script>
-			<script src="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/js/jquery.dropotron.min.js"></script>
-			<script src="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/js/browser.min.js"></script>
-			<script src="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/js/breakpoints.min.js"></script>
-			<script src="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/js/util.js"></script>
-			<script src="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/js/main.js"></script>
+			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/jquery.min.js"></script>
+			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/jquery.dropotron.min.js"></script>
+			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/browser.min.js"></script>
+			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/breakpoints.min.js"></script>
+			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/util.js"></script>
+			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/main.js"></script>
 
 	</body>
 </html>
