--- a/html/about-us.html
+++ b/html/about-us.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Bee Right Back Farms</title>
+		<title>Left Sidebar - Arcana by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/css/main.css" />
@@ -95,39 +95,33 @@
 
 										<article>
 											<header>
-												<h2>About Us</h2>
+												<h2>Left Sidebar</h2>
 												<p>Sidebar on the left, content on the right.</p>
 											</header>
 
 											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
-											<p>Idaho Falls is about to have a lot more pollinators with the hard work of a dedicated and skilled 
-											retired soldier Blake Brimhall. With an Army career spanning over thirty years, he served in both Desert
-											Storm and Shield operations. After years ofspecializing in Air Defense throughout the Pacific Region he 
-											went from focusing on THAAD and Patriot Missile Defense systems to developing his own much smaller (and 
-											honey producing) objects-in-flight program.</p>
-											<p>While starting his retirement in Hawaii, his wife encouraged him to find a hobby. Blake began studying
-											YouTube videos on beekeeping and along with his son’s encouragement, he’s gone from catching a wild swarm 
-											of bees in Hawaii to successfully maintaining multiple hives outside of his present home the Gem state’s 
-											southeastern corner.</p>
-											<p>In the spring of 2021, he built eight hives and in order to keep costs down, constructed nearly all 
-											of them from recycled shipping material. “When we moved here all our items came in crates and they were
-											going to throw them away. I said Whoa! Lemme keep them crates! I broke all the crates down and kept the 
-											quarter inch plywood…so my first year I built all my hives and frames.”
-											He started with a variety of types of bees: local, Italian, Carniolin, and Saskatraz. The first and 
-											second winter were hard, and he lost five hives. The third winter brought another loss in the form of the
-											dreaded mite. While he’s traditionally found oxalic acid treatments are effective, the cold weather created 
-											a barrier with its success. The Idaho winters bring long deep freezes, copious amounts of snowfall, and with 
-											those fluctuations’ humidity challenges.</p><p>Each heartache brought with it a new valuable lesson: Certain hive designs work best in certain applications. Slight adaptations like using a wool pillowfor sudden temperature drops can help. Using Hive Alive fondant can support colony health. And finding the effective timing for mite management.
-											With three years of beekeeping under his belt, the next goal is to eventually start marketing honey 
-											to his local community under the Homegrown by Heroes program. “I can’t say I ever really thought I would
-											be a beekeeper, but the more I keep bees the more I love them.” Encouraged to apply to the Fellowship Fund 
-											program by a learning module in Dr. Adam Ingrao’s Heroes to Hives program, he’s pleased to be continuing to
-											pursue this journey.</p>
-											<p>Before becoming a recipient of the Fellowship Fund program Blake wasn’t sure he was going to continue
-											beekeeping. “I really thought I was going to quit bees, but I didn’t want to. The bees give me a lot of 
-											happiness.” By receiving the FVCFellowship through the generous support of AgWest Farm Credit he will be 
-											adding a honey extractor, five hives, and five swarm traps to his business aptly named “Bee Right Back Bees”.</p>
+											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
+											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
+											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
+											consequat etiam lorem ipsum dolor sit amet nullam.</p>
+
+											<h3>And Yet Another Subheading</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
+											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
+											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
+											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
+											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
+											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
+											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
+											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+
+											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
+											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
+											Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
+											fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
+											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
+											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
 										</article>
 
 								</div>
