updated files again

--- a/html/index.html
+++ b/html/index.html
@@ -190,7 +190,7 @@
 									</div>
 								</form>
 							</section>
-							<section class="col-3 col-6-narrower col-12-mobilep">
+							<section class=" colonel col-12-mobilep">
 								<section class="col-3 col-6-narrower col-12-mobilep">
 									<div class = "row gtr-50 lgs logs">
 									<img class = 'pic'src='C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/hivesforheroes.png' alt='Heroes For Hives'>
