--- a/html/Shopping.html
+++ b/html/Shopping.html
@@ -31,7 +31,7 @@
 										<li><a href="#">Eggs</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
+								<li><a href="left-sidebar.html">About Us</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="two-sidebar.html">Two Sidebar</a></li>
 								<li class="current"><a href="no-sidebar.html">No Sidebar</a></li>
