--- a/html/Shopping.html
+++ b/html/Shopping.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Arcana by HTML5 UP</title>
+		<title>Bee Right Back Bees Shopping</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/css/main.css" />
+		<link rel="stylesheet" href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/css/main.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -18,23 +18,23 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Arcana <em>by HTML5 UP</em></a></h1>
+						<h1><a href="index.html" id="logo">Bee <em>Right Back Bees</em></a></h1>
+						<section class='lgs'>
+						<img class = 'idaho'src='C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/idahopreferred logo.jpg' alt='Idaho Preferred Logo'>
+						</section>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Shopping</a>
+								<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/index.html">Home</a></li>
+								<li class='current'>
+									<a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Shopping</a>
 									<ul>
-										<li><a href="#">Honey</a></li>
-										<li><a href="#">Eggs</a></li>
+										<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Honey</a></li>
+										<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Eggs</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">About Us</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="two-sidebar.html">Two Sidebar</a></li>
-								<li class="current"><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/about-us.html">About Us</a></li>
 							</ul>
 						</nav>
 
@@ -50,12 +50,12 @@
 								<section id='shop'>
 									<section  class='purchase'>
 										<h2>Honey</h2>
-										<img  class = "honey" src="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/images/honey-jar.jpg" alt='A Jar of Honey'>
+										<img  class = "honey" src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/honey-jar.jpg" alt='A Jar of Honey'>
 										<button class="buy">Buy</button>
 									</section>
 									<section class='purchase'>
 										<h2>Eggs</h2>
-										<img class = "honey" src="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/images/eggs.jpg" alt='An Egg'>
+										<img class = "honey" src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/eggs.jpg" alt='An Egg'>
 											<button class="buy">Buy</button>
 									</section>
 								</section>
@@ -65,27 +65,19 @@
 					<div class="container">
 						<div class="row">
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
+								<h3>Links to us</h3>
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
+									<li><a href="#">Home</a></li>
+									<li><a href="#">Shopping</a></li>
+									<li><a href="#">About Us</a></li>
 								</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
+								<h3>Links to Places</h3>
 								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
+									<li><a href="https://idahopreferred.com/">Local Info</a></li>
+									<li><a href="https://neidahobeekeepers.org/">Local Beekeeper Association</a></li>
+									<li><a href="https://scientificbeekeeping.com/">Useful Info</a></li>
 								</ul>
 							</section>
 							<section class="col-6 col-12-narrower">
@@ -109,16 +101,23 @@
 									</div>
 								</form>
 							</section>
+							<section class=" colonel col-12-mobilep">
+								<section class="col-3 col-6-narrower col-12-mobilep">
+									<div class = "row gtr-50 lgs logs">
+									<img class = 'pic'src='C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/hivesforheroes.png' alt='Heroes For Hives'>
+									</div>
+								</section>
+								<section class="col-3 col-6-narrower col-12-mobilep">
+									<div class= "row gtr-50 lgs">
+									<img class = 'logoPics'src='C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/heroestohives.png' alt='Heroes to Hives'>
+									</div>
+								</section>
+							</section>
 						</div>
 					</div>
 
 					<!-- Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
 						</ul>
 
 					<!-- Copyright -->
