added a few images
Added images and changes at main.css

--- a/html/Shopping.html
+++ b/html/Shopping.html
@@ -18,7 +18,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Bee <em>Right Back Bees</em></a></h1>
+						<h1><a href="index.html" id="logo">Bee <em>Right Back Farms</em></a></h1>
 						<section class='lgs'>
 						<img class = 'idaho'src='C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/idahopreferred logo.jpg' alt='Idaho Preferred Logo'>
 						</section>
@@ -67,9 +67,9 @@
 							<section class="col-3 col-6-narrower col-12-mobilep">
 								<h3>Links to us</h3>
 								<ul class="links">
-									<li><a href="#">Home</a></li>
-									<li><a href="#">Shopping</a></li>
-									<li><a href="#">About Us</a></li>
+									<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/index.html">Home</a></li>
+									<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Shopping</a></li>
+									<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/about-us.html">About Us</a></li>
 								</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
