--- a/html/about-us.html
+++ b/html/about-us.html
@@ -18,7 +18,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Arcana <em>by HTML5 UP</em></a></h1>
+						<h1><a href="index.html" id="logo">Bee <em>Right Back Farms</em></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -98,7 +98,7 @@
 											sudden temperature drops can help. Using Hive Alive fondant can support colony health. And finding the effective timing 
 											for mite management.</p>
 
-											<p>With three years of beekeeping under his belt, the next goal is to eventually start 
+											<p>With a few years of beekeeping under his belt, the next goal is to eventually start 
 											marketing honey to his local community under the Homegrown by Heroes program. “I can’t 
 											say I ever really thought I would be a beekeeper, but the more I keep bees the more I love them.” 
 											Encouraged to apply to the Fellowship Fund program by a learning module in Dr. Adam Ingrao’s Heroes to Hives program,
@@ -124,9 +124,9 @@
 							<section class="col-3 col-6-narrower col-12-mobilep">
 								<h3>Links to us</h3>
 								<ul class="links">
-									<li><a href="#">Home</a></li>
-									<li><a href="#">Shopping</a></li>
-									<li><a href="#">About Us</a></li>
+									<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/index.html">Home</a></li>
+									<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Shopping</a></li>
+									<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/about-us.html">About Us</a></li>
 								</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
