--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Bee right back farms</title>
+		<title>Bee Right Back Farms</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/css/main.css" />
