Added some Javascript and images
finished work on logos. Need to add to other pages and fix the javascript

--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 		<title>Bee Right Back Farms</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/css/main.css" />
+		<link rel="stylesheet" href="C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/css/main.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -19,9 +19,9 @@
 
 					<!-- Logo -->
 						<section class='lgs'>
-						<img class = 'idaho'src='C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/Logo.jpg' alt='Idaho Preferred Logo'>
+						<img class = 'brb'src='C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/images/Logo.jpg' alt='BRB logo'>
 						<h1><a href="index.html" id="logo">Bee <em>Right Back Farms</em></a></h1>
-						<img class = 'idaho'src='C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/idahopreferred logo.jpg' alt='Idaho Preferred Logo'>
+						<img class = 'idaho'src='C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/images/idahopreferred veteran logo.png' alt='Idaho Preferred Logo'>
 						</section>
 						
 					<!-- Nav -->
@@ -185,17 +185,9 @@
 									</div>
 								</form>
 							</section>
-							<section class=" colonel col-12-mobilep">
-								<section class="col-3 col-6-narrower col-12-mobilep">
-									<div class = "row gtr-50 lgs logs">
-									<img class = 'pic'src='C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/hivesforheroes.png' alt='Heroes For Hives'>
-									</div>
-								</section>
-								<section class="col-3 col-6-narrower col-12-mobilep">
-									<div class= "row gtr-50 lgs">
-									<img class = 'logoPics'src='C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/heroestohives.png' alt='Heroes to Hives'>
-									</div>
-								</section>
+							<section class="colonel col-12-mobilep">
+									<img class = 'pic'src='C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/images/hivesforheroes.png' alt='Heroes For Hives'>
+									<img class = 'logoPics'src='C:/Users/Max Brimhall/Documents/GitHub/brbees/Beerightbackbees/images/heroestohives.png' alt='Heroes to Hives'>
 							</section>
 						</div>
 					</div>
