added the logo to other pages

--- a/html/Shopping.html
+++ b/html/Shopping.html
@@ -18,9 +18,10 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Bee <em>Right Back Farms</em></a></h1>
 						<section class='lgs'>
-						<img class = 'idaho'src='C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/idahopreferred logo.jpg' alt='Idaho Preferred Logo'>
+						<img class = 'brb'src='C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/images/Logo.jpg' alt='BRB logo'>
+						<h1><a href="index.html" id="logo">Bee <em>Right Back Farms</em></a></h1>
+						<img class = 'idaho'src='C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/images/idahopreferred veteran logo.png' alt='Idaho Preferred Logo'>
 						</section>
 
 					<!-- Nav -->
