--- a/html/about-us.html
+++ b/html/about-us.html
@@ -18,8 +18,11 @@
 				<div id="header">
 
 					<!-- Logo -->
+						<section class='lgs'>
+						<img class = 'brb'src='C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/images/Logo.jpg' alt='BRB logo'>
 						<h1><a href="index.html" id="logo">Bee <em>Right Back Farms</em></a></h1>
-
+						<img class = 'idaho'src='C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/images/idahopreferred veteran logo.png' alt='Idaho Preferred Logo'>
+						</section>
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
