--- a/html/index.html
+++ b/html/index.html
@@ -166,7 +166,7 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<h3>Get In Touch</h3>
-								<form>
+								<form id="my-form" action="https://formspree.io/f/mqkrovpv" method="POST">
 									<div class="row gtr-50">
 										<div class="col-6 col-12-mobilep">
 											<input type="text" name="name" id="name" placeholder="Name" />
@@ -179,8 +179,9 @@
 										</div>
 										<div class="col-12">
 											<ul class="actions">
-												<li><input type="submit" class="button alt" value="Send Message" /></li>
+												<li><input id="my-form-button" type="submit" class="button alt" value="Send Message" /></li>
 											</ul>
+											<p id="my-form-status"></p>
 										</div>
 									</div>
 								</form>
