--- a/html/Shopping.html
+++ b/html/Shopping.html
@@ -9,7 +9,7 @@
 		<title>Bee Right Back Farm Shopping</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/css/main.css" />
+		<link rel="stylesheet" href="C:\Users\Max Brimhall\Documents\GitHub\Beerightbackbees\css\main.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
