Added a few new pages
Need to get some links working but we did change the pages quite a bit

--- a/html/purchase.html
+++ b/html/purchase.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Arcana by HTML5 UP</title>
+		<title>Bee Right Back Farms</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/css/main.css" />
@@ -49,7 +49,7 @@
 							<!-- Content -->
 
 								<section class="col-6 col-12-narrower">
-								<h3>Get In Touch</h3>
+								<h3>Purchase Your Eggs Here!</h3>
 								<form id="my-form" action="https://formspree.io/f/mqkrovpv" method="POST">
 									<div class="row gtr-50">
 										<div class="col-6 col-12-mobilep">
@@ -59,7 +59,7 @@
 											<input type="email" name="email" id="email" placeholder="Email" />
 										</div>
 										<div class="col-12">
-											<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
+											<textarea name="message" id="message" placeholder="Day, Time, and how many Eggs you want" rows="5"></textarea>
 										</div>
 										<div class="col-12">
 											<ul class="actions">
