--- a/html/Shopping.html
+++ b/html/Shopping.html
@@ -57,12 +57,12 @@
 												<li><a href ="C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/html/purchase.html"></a></li>
 											</ul>
 										</nav>
-										<button class="buy">Buy</button>
+										<button class="buy" id='honey'>Buy</button>
 									</section>
 									<section class='purchase'>
 										<h2>Eggs</h2>
 										<img class = "honey" src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/eggs.jpg" alt='An Egg'>
-											<button class="buy">Buy</button>
+											<button class="buy" id='eggs'>Buy</button>
 									</section>
 								</section>
 
@@ -139,12 +139,12 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/jquery.min.js"></script>
+			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/jquery.dropotron.min.js"></script>
+			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/browser.min.js"></script>
+			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/breakpoints.min.js"></script>
+			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/util.js"></script>
+			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/main.js"></script>
 
 	</body>
 </html>
