Updated a few things
Updated CSS Link

--- a/html/Shopping.html
+++ b/html/Shopping.html
@@ -9,7 +9,7 @@
 		<title>Bee Right Back Farms</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="C:\Users\Max Brimhall\Documents\GitHub\Beerightbackbees\css\main.css" />
+		<link rel="stylesheet" type = "text/css" href="css/main.css"/>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -19,7 +19,7 @@
 
 					<!-- Logo -->
 						<section class='lgs'>
-						<img class = 'brb'src='C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/images/Logo.jpg' alt='BRB logo'>
+						<img class = 'brb'src='Logo.jpg' alt='BRB logo'>
 						<h1><a href="index.html" id="logo">Bee <em>Right Back Farms</em></a></h1>
 						<img class = 'idaho'src='C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/images/idahopreferred veteran logo.png' alt='Idaho Preferred Logo'>
 						</section>
