--- a/purchase.html
+++ b/purchase.html
@@ -9,7 +9,7 @@
 		<title>Bee Right Back Farms</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/css/main.css" />
+		<link rel="stylesheet" href="css/main.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -19,9 +19,9 @@
 
 					<!-- Logo -->
 						<section class='lgs'>
-						<img class = 'brb'src='C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/images/Logo.jpg' alt='BRB logo'>
+						<img class = 'brb'src='images/Logo.jpg' alt='BRB logo'>
 						<h1><a href="index.html" id="logo">Bee <em>Right Back Farms</em></a></h1>
-						<img class = 'idaho'src='C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/images/idahopreferred veteran logo.png' alt='Idaho Preferred Logo'>
+						<img class = 'idaho'src='images/idahopreferred veteran logo.png' alt='Idaho Preferred Logo'>
 						</section>
 
 					<!-- Nav -->
@@ -29,13 +29,13 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Shopping</a>
+									<a href="Shopping.html">Shopping</a>
 									<ul>
-										<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Honey</a></li>
-										<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Eggs</a></li>
+										<li><a href="Shopping.html">Honey</a></li>
+										<li><a href="Shopping.html">Eggs</a></li>
 									</ul>
 								</li>
-								<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/about-us.html">About Us</a></li>
+								<li><a href="about-us.html">About Us</a></li>
 							</ul>
 						</nav>
 
@@ -49,7 +49,7 @@
 							<!-- Content -->
 
 								<section class="col-6 col-12-narrower">
-								<h3>Purchase Your Honey Here!</h3>
+								<h3>Purchase Your Eggs Here!</h3>
 								<form id="my-form" action="https://formspree.io/f/mqkrovpv" method="POST">
 									<div class="row gtr-50">
 										<div class="col-6 col-12-mobilep">
@@ -59,7 +59,7 @@
 											<input type="email" name="email" id="email" placeholder="Email" />
 										</div>
 										<div class="col-12">
-											<textarea name="message" id="message" placeholder="Day, Time, and how much Honey you want" rows="5"></textarea>
+											<textarea name="message" id="message" placeholder="Day, Time, and how many Eggs you want" rows="5"></textarea>
 										</div>
 										<div class="col-12">
 											<ul class="actions">
@@ -82,9 +82,9 @@
 							<section class="col-3 col-6-narrower col-12-mobilep">
 								<h3>Links to us</h3>
 								<ul class="links">
-									<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/index.html">Home</a></li>
-									<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Shopping</a></li>
-									<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/about-us.html">About Us</a></li>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="Shopping.html">Shopping</a></li>
+									<li><a href="about-us.html">About Us</a></li>
 								</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
@@ -118,8 +118,8 @@
 								</form>
 							</section>
 							<section class="colonel col-12-mobilep">
-									<img class = 'pic'src='C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/images/hivesforheroes.png' alt='Heroes For Hives'>
-									<img class = 'logoPics'src='C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/images/heroestohives.png' alt='Heroes to Hives'>
+									<img class = 'pic'src='images/hivesforheroes.png' alt='Heroes For Hives'>
+									<img class = 'logoPics'src='images/heroestohives.png' alt='Heroes to Hives'>
 							</section>
 						</div>
 					</div>
@@ -145,12 +145,12 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="js/jquery.min.js"></script>
+			<script src="js/jquery.dropotron.min.js"></script>
+			<script src="js/browser.min.js"></script>
+			<script src="js/breakpoints.min.js"></script>
+			<script src="js/util.js"></script>
+			<script src="js/main.js"></script>
 
 	</body>
 </html>
