--- a/Shopping.html
+++ b/Shopping.html
@@ -19,23 +19,23 @@
 
 					<!-- Logo -->
 						<section class='lgs'>
-						<img class = 'brb'src='Logo.jpg' alt='BRB logo'>
+						<img class = 'brb'src='images/Logo.jpg' alt='BRB logo'>
 						<h1><a href="index.html" id="logo">Bee <em>Right Back Farms</em></a></h1>
-						<img class = 'idaho'src='C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/images/idahopreferred veteran logo.png' alt='Idaho Preferred Logo'>
+						<img class = 'idaho'src='images/idahopreferred veteran logo.png' alt='Idaho Preferred Logo'>
 						</section>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/index.html">Home</a></li>
+								<li><a href="index.html">Home</a></li>
 								<li class='current'>
-									<a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Shopping</a>
+									<a href="Shopping.html">Shopping</a>
 									<ul>
-										<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Honey</a></li>
-										<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Eggs</a></li>
+										<li><a href="Shopping.html">Honey</a></li>
+										<li><a href="Shopping.html">Eggs</a></li>
 									</ul>
 								</li>
-								<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/about-us.html">About Us</a></li>
+								<li><a href="about-us.html">About Us</a></li>
 							</ul>
 						</nav>
 
@@ -51,17 +51,17 @@
 								<section id='shop'>
 									<section  class='purchase'>
 										<h2>Honey</h2>
-										<img  class = "honey" src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/honey-jar.jpg" alt='A Jar of Honey'>
+										<img  class = "honey" src="images/honey-jar.jpg" alt='A Jar of Honey'>
 										<nav>
 											<ul>
-												<li><a href ="C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/html/purchase.html"></a></li>
+												<li><a href ="purchase.html"></a></li>
 											</ul>
 										</nav>
 										<button class="buy" id='honey'>Buy</button>
 									</section>
 									<section class='purchase'>
 										<h2>Eggs</h2>
-										<img class = "honey" src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/eggs.jpg" alt='An Egg'>
+										<img class = "honey" src="images/eggs.jpg" alt='An Egg'>
 											<button class="buy" id='eggs'>Buy</button>
 									</section>
 								</section>
@@ -73,9 +73,9 @@
 							<section class="col-3 col-6-narrower col-12-mobilep">
 								<h3>Links to us</h3>
 								<ul class="links">
-									<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/index.html">Home</a></li>
-									<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Shopping</a></li>
-									<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/about-us.html">About Us</a></li>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="Shopping.html">Shopping</a></li>
+									<li><a href="about-us.html">About Us</a></li>
 								</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
@@ -111,12 +111,12 @@
 							<section class=" colonel col-12-mobilep">
 								<section class="col-3 col-6-narrower col-12-mobilep">
 									<div class = "row gtr-50 lgs logs">
-									<img class = 'pic'src='C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/hivesforheroes.png' alt='Heroes For Hives'>
+									<img class = 'pic'src='images/hivesforheroes.png' alt='Heroes For Hives'>
 									</div>
 								</section>
 								<section class="col-3 col-6-narrower col-12-mobilep">
 									<div class= "row gtr-50 lgs">
-									<img class = 'logoPics'src='C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/images/heroestohives.png' alt='Heroes to Hives'>
+									<img class = 'logoPics'src='images/heroestohives.png' alt='Heroes to Hives'>
 									</div>
 								</section>
 							</section>
@@ -139,12 +139,12 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/jquery.min.js"></script>
-			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/jquery.dropotron.min.js"></script>
-			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/browser.min.js"></script>
-			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/breakpoints.min.js"></script>
-			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/util.js"></script>
-			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/main.js"></script>
+			<script src="js/jquery.min.js"></script>
+			<script src="js/jquery.dropotron.min.js"></script>
+			<script src="js/browser.min.js"></script>
+			<script src="js/breakpoints.min.js"></script>
+			<script src="js/util.js"></script>
+			<script src="js/main.js"></script>
 
 	</body>
 </html>
