--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Bee Right Back Farms</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/css/main.css" />
+		<link rel="stylesheet" href="css/main.css"/>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -19,9 +19,9 @@
 
 					<!-- Logo -->
 						<section class='lgs'>
-						<img class = 'brb'src='C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/images/Logo.jpg' alt='BRB logo'>
+						<img class = 'brb'src='images/Logo.jpg' alt='BRB logo'>
 						<h1><a href="index.html" id="logo">Bee <em>Right Back Farms</em></a></h1>
-						<img class = 'idaho'src='C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/images/idahopreferred veteran logo.png' alt='Idaho Preferred Logo'>
+						<img class = 'idaho'src='images/idahopreferred veteran logo.png' alt='Idaho Preferred Logo'>
 						</section>
 						
 					<!-- Nav -->
@@ -29,13 +29,13 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Shopping</a>
+									<a href="Shopping.html">Shopping</a>
 									<ul>
-										<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Honey</a></li>
-										<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Eggs</a></li>
+										<li><a href="Shopping.html">Honey</a></li>
+										<li><a href="Shopping.html">Eggs</a></li>
 									</ul>
 								</li>
-								<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/about-us.html">About Us</a></li>
+								<li><a href="about-us.html">About Us</a></li>
 							</ul>
 						</nav>
 
@@ -151,9 +151,9 @@
 							<section class="col-3 col-6-narrower col-12-mobilep">
 								<h3>Links to us</h3>
 								<ul class="links">
-									<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/index.html">Home</a></li>
-									<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/Shopping.html">Shopping</a></li>
-									<li><a href="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/html/about-us.html">About Us</a></li>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="Shopping.html">Shopping</a></li>
+									<li><a href="about-us.html">About Us</a></li>
 								</ul>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
@@ -187,8 +187,8 @@
 								</form>
 							</section>
 							<section class="colonel col-12-mobilep">
-									<img class = 'pic'src='C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/images/hivesforheroes.png' alt='Heroes For Hives'>
-									<img class = 'logoPics'src='C:/Users/Max Brimhall/Documents/GitHub/Beerightbackbees/images/heroestohives.png' alt='Heroes to Hives'>
+									<img class = 'pic'src='images/hivesforheroes.png' alt='Heroes For Hives'>
+									<img class = 'logoPics'src='images/heroestohives.png' alt='Heroes to Hives'>
 							</section>
 						</div>
 					</div>
@@ -208,12 +208,12 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/jquery.min.js"></script>
-			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/jquery.dropotron.min.js"></script>
-			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/browser.min.js"></script>
-			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/breakpoints.min.js"></script>
-			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/util.js"></script>
-			<script src="C:/Users/mbrim/OneDrive/Documents/GitHub/Beerightbackbees/js/main.js"></script>
+			<script src="js/jquery.min.js"></script>
+			<script src="js/jquery.dropotron.min.js"></script>
+			<script src="js/browser.min.js"></script>
+			<script src="js/breakpoints.min.js"></script>
+			<script src="js/util.js"></script>
+			<script src="js/main.js"></script>
 
 	</body>
 </html>
