--- a/index.html
+++ b/index.html
@@ -55,21 +55,18 @@
 						<div class="row gtr-200">
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-paper-plane"></i>
 									<h3>Honey</h3>
 									<p>Honey has been used in the past as an antibacterial agent, Anti-inflammatory and Antioxidant keeping people healthy for many years!</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-pencil-alt"></i>
 									<h3>Beeswax</h3>
 									<p>Beeswax has been used for the stereotypical candle-making as well as, conditioning wood, skincare products, and as a foodwrap. Interesting facts, right?</p>
 								</div>
 							</section>
 							<section class="col-4 col-12-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-wrench"></i>
 									<h3>Pollination</h3>
 									<p>Pollination is used by plants to reproduce. Why is this important? Because we eat plant babies regularly..</p>
 								</div>
@@ -94,7 +91,7 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/honey.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Honey</h3>
 										<p>The only food that we harvest from an insect is Honey.</p>
@@ -103,7 +100,7 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/beeswax.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Beeswax</h3>
 										<p>From beauty products to functional uses like preserving food, Beeswax is all important to society currently</p>
@@ -114,7 +111,7 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/pollination.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Pollination</h3>
 										<p>We need polination for food whether you are a meat eater or not. However, Pollination has a dark side to it as well.</p>
@@ -123,7 +120,7 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/mites.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Diseases</h3>
 										<p>Everything now is fighting against the bee. They have diseases and parasites that are killing entire colonies.</p>
