--- a/Shopping.html
+++ b/Shopping.html
@@ -31,8 +31,8 @@
 								<li class='current'>
 									<a href="Shopping.html">Shopping</a>
 									<ul>
-										<li><a href="Shopping.html">Honey</a></li>
-										<li><a href="Shopping.html">Eggs</a></li>
+										<li><a href="honeypurchase.html">Honey</a></li>
+										<li><a href="purchase.html">Eggs</a></li>
 									</ul>
 								</li>
 								<li><a href="about-us.html">About Us</a></li>
