--- a/about-us.html
+++ b/about-us.html
@@ -30,8 +30,8 @@
 								<li>
 									<a href="Shopping.html">Shopping</a>
 									<ul>
-										<li><a href="Shopping.html">Honey</a></li>
-										<li><a href="Shopping.html">Eggs</a></li>
+										<li><a href="honeypurchase.html">Honey</a></li>
+										<li><a href="purchase.html">Eggs</a></li>
 									</ul>
 								</li>
 								<li  class="current"><a href="about-us.html">About Us</a></li>
