forgot to update the current page

--- a/honeypurchase.html
+++ b/honeypurchase.html
@@ -27,9 +27,9 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
-								<li>
-									<a href="Shopping.html">Shopping</a>
+								<li><a href="index.html">Home</a></li>
+								<li class="current">
+									<a href="Shopping.html" >Shopping</a>
 									<ul>
 										<li><a href="honeypurchase.html">Honey</a></li>
 										<li><a href="purchase.html">Eggs</a></li>
