--- a/purchase.html
+++ b/purchase.html
@@ -27,8 +27,8 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
-								<li>
+								<li><a href="index.html">Home</a></li>
+								<li class="current">
 									<a href="Shopping.html">Shopping</a>
 									<ul>
 										<li><a href="honeypurchase.html">Honey</a></li>
