--- a/Shopping.html
+++ b/Shopping.html
@@ -19,7 +19,7 @@
 
 					<!-- Logo -->
 						<section class='lgs'>
-						<img class = 'brb'src='images/Logo.jpg' alt='BRB logo'>
+						<img class = 'brb'src='images/Logo-preview.png' alt='BRB logo'>
 						<h1><a href="index.html" id="logo">Bee <em>Right Back Farms</em></a></h1>
 						<img class = 'idaho'src='images/idahopreferred veteran logo.png' alt='Idaho Preferred Logo'>
 						</section>
