--- a/honeypurchase.html
+++ b/honeypurchase.html
@@ -19,7 +19,7 @@
 
 					<!-- Logo -->
 						<section class='lgs'>
-						<img class = 'brb'src='images/Logo.jpg' alt='BRB logo'>
+						<img class = 'brb'src='images/Logo-preview.png' alt='BRB logo'>
 						<h1><a href="index.html" id="logo">Bee <em>Right Back Farms</em></a></h1>
 						<img class = 'idaho'src='images/idahopreferred veteran logo.png' alt='Idaho Preferred Logo'>
 						</section>
@@ -125,13 +125,13 @@
 					</div>
 
 					<!-- Icons -->
-						<ul class="icons">
+						<!-- <ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
-						</ul>
+						</ul> -->
 
 					<!-- Copyright -->
 						<div class="copyright">
