--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/honey.jpg" alt="" /></a>
+									<a class="image left"><img src="images/honey.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Honey</h3>
 										<p>The only food that we harvest from an insect is Honey.</p>
@@ -100,7 +100,7 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/beeswax.jpg" alt="" /></a>
+									<a class="image left"><img src="images/beeswax.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Beeswax</h3>
 										<p>From beauty products to functional uses like preserving food, Beeswax is all important to society currently</p>
@@ -111,7 +111,7 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pollination.jpg" alt="" /></a>
+									<a class="image left"><img src="images/pollination.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Pollination</h3>
 										<p>We need polination for food whether you are a meat eater or not. However, Pollination has a dark side to it as well.</p>
@@ -120,7 +120,7 @@
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/mites.jpg" alt="" /></a>
+									<a class="image left"><img src="images/mites.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>Diseases</h3>
 										<p>Everything now is fighting against the bee. They have diseases and parasites that are killing entire colonies.</p>
