Final update to the website.
Updated images and sizes of images.

--- a/about-us.html
+++ b/about-us.html
@@ -72,7 +72,7 @@
 												<p>My Story</p>
 											</header>
 
-											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+											<span class="image featured"><img src="images/blake-copy.jpg" alt="" /></span>
 
 											<p>Idaho Falls is about to have a lot more pollinators with the hard work of a dedicated 
 											and skilled retired soldier Blake Brimhall. With an Army career spanning over thirty years, 
@@ -160,9 +160,9 @@
 									</div>
 								</form>
 							</section>
-							<section class="colonel col-12-mobilep">
-									<img class = 'pic'src='images/hivesforheroes.png' alt='Heroes For Hives'>
+							<section class="colonel col-12-mobilep col-12-mobilep">
 									<img class = 'logoPics'src='images/heroestohives.png' alt='Heroes to Hives'>
+									<img class = 'pic'src='images/hivesforheroes.png' alt='Heroes For Hives'>
 							</section>
 						</div>
 					</div>
