--- a/purchase.html
+++ b/purchase.html
@@ -117,9 +117,9 @@
 									</div>
 								</form>
 							</section>
-							<section class="colonel col-12-mobilep">
-									<img class = 'pic'src='images/hivesforheroes.png' alt='Heroes For Hives'>
+							<section class="colonel col-12-mobilep col-12-mobilep">
 									<img class = 'logoPics'src='images/heroestohives.png' alt='Heroes to Hives'>
+									<img class = 'pic'src='images/hivesforheroes.png' alt='Heroes For Hives'>
 							</section>
 						</div>
 					</div>
